sites/public/styles/overrides.scss
/* Overrides the default ui-components styles with Detroit-specific styles. */
@import url("https://fonts.googleapis.com/css?family=Montserrat:400,600,700");
@import "@bloom-housing/ui-components/src/global/tokens/fonts.scss";
@import "@bloom-housing/ui-components/src/global/tokens/borders.scss";
@import "@bloom-housing/ui-components/src/global/tokens/colors.scss";
@import "@bloom-housing/ui-components/src/global/tokens/screens.scss";
@import "@bloom-housing/ui-components/src/global/tokens/sizes.scss";
@import "@bloom-housing/ui-components/src/global/mixins.scss";
@import "@bloom-housing/ui-components/src/global/text.scss";
@import "@bloom-housing/ui-components/src/global/markdown.scss";
@import "@bloom-housing/ui-components/src/global/lists.scss";

#__next {
  // Certain SVG icons should be green.
  // NOTE: might not need, could delete. -JW
  .filled-icon .ui-icon svg {
    fill: $tailwind-primary-darker;
  }

  $header-desktop-min-size: 1024px;

  @import "blocks.scss";
  @import "forms.scss";
  @import "footers.scss";
  @import "forms.scss";
  @import "headers.scss";
  @import "listings.scss";
  @import "overlays.scss";

  /* One-offs: */

  .loading-overlay__spinner circle {
    stroke: $tailwind-primary;
  }

  // Center the front page.
  .homepage-extra {
    @apply text-center;
    @apply text-base;
    @apply mb-10;
  }

  // Fix rtl border between action blocks on the homepage.
  .homepage-extra {
    .action-blocks {
      @screen md {
        > :nth-child(2) {
          border-left-width: 0;
          border-inline-width: 1px;
        }
      }
    }
  }

  .eligibility-disclaimer-header {
    padding: 20px 80px;
  }

  .eligibility-disclaimer-submit-container {
    padding-bottom: 40px;
    text-align: center;
  }

  .accessibility-eligibility-selector {
    column-count: 2;
    font-size: small;
    margin-bottom: 20px;
    margin-top: 10px;
    .field {
      margin-bottom: 3.5px;
    }
  }

  .button {
    --normal-rounded: 60px;
    --normal-padding: 0.5rem 1rem;
    --normal-font-size: var(--bloom-font-size-base);
    --label-letter-spacing: normal;
    --label-transform: none;
    --unstyled-inline-font-size: var(--bloom-font-size-sm);
    &:hover {
      svg {
        fill: var(--bloom-color-white);
      }
    }
    .ui-icon {
      &.button__icon {
        margin: 0 0.5rem 0 0;
      }
    }
  }

  .action-block {
    h3 {
      font-size: var(--bloom-font-size-lg);
    }
  }

  // These will be removed as we sync the remaining components
  .aside-block {
    svg {
      fill: var(--bloom-color-primary);
    }
  }

  .header-badge {
    svg {
      width: 3rem;
      height: 3rem;
      @media (max-width: 640px) {
        width: 2.5rem;
        height: 2.5rem;
      }
    }
  }

  .alert-box.primary {
    background-color: var(--bloom-color-gray-400);
  }

  .filter-form {
    .view-item__label {
      --label-text-color: var(--bloom-color-gray-750);
    }
  }

  .drawer {
    --content-padding: 0;
    --content-height: 100%;
  }

  .page-header {
    --inverse-background-color: var(--bloom-color-primary-darker);
    --title-font-size-desktop: 1.75rem;
    --title-font-size-mobile: 1.5rem;
    h1 {
      // TODO remove, + in uic
      // margin-bottom: var(--bloom-s4);
      font-weight: 700;
    }
  }

  .footer-sock {
    --background-color: var(--bloom-color-black);
    --copyright-text-color: var(--bloom-color-gray-600);
  }

  .button-group {
    --background-color: var(--bloom-color-gray-300);
  }

  .details {
    --desktop-width: auto;
  }

  .markdown {
    h3 {
      margin-bottom: var(--bloom-s2);
      margin-top: var(--bloom-s8);
    }
    h4 {
      font-size: var(--bloom-font-size-2xl);
      margin-bottom: var(--bloom-s2);
      margin-top: var(--bloom-s8);
    }
  }

  .icon-black {
    &:hover {
      svg {
        fill: var(--bloom-color-black);
      }
    }
    svg {
      fill: var(--bloom-color-black);
    }
  }

  .drawer__header {
    h1 {
      font-size: 1.375rem;
    }
  }

  .field {
    .prepend {
      font-size: var(--bloom-font-size-xl);
    }
  }

  .info-card {
    font-size: var(--bloom-font-size-sm);
  }
}

:root {
  --detroit-font-sans: [ "Montserrat", "Open Sans", "Helvetica", "Arial", "Verdana", "sans-serif" ];
  --detroit-font-serif: [ "Montserrat", "Droid Serif", "Georgia", "Times", "serif" ];

  --bloom-font-sans: var(--detroit-font-sans);
  --bloom-font-alt-sans: var(--detroit-font-sans);
  --bloom-color-accent-cool: #297e73;
  --bloom-color-gray-700: #000000;
  --bloom-color-gray-800: #18252a;
  --bloom-color-gray-950: #000000;
  --bloom-color-lush: #feb70d;
  --bloom-color-primary-dark: rgb(0, 68, 69);
  --bloom-color-primary-darker: #004445;
  --bloom-color-primary-light: #f2f2f2;
  --bloom-color-primary-lighter: #f2f2f2;
  --bloom-color-primary: rgb(41, 126, 115);
  --bloom-color-warn: #feb70d;
  --bloom-font-serif: var(--detroit-font-serif);
  --primary-appearance-hover-background-color: white;
  --primary-appearance-hover-label-color: var(--bloom-color-primary);
  --primary-appearance-hover-border-color: var(--bloom-color-primary);
  --outlined-appearance-hover-background-color: var(--bloom-color-primary);
  --outlined-appearance-hover-border-color: var(--bloom-color-primary);
}

